[IRONWOOD-64] fix course card alignment on courses page

--- a/lms/static/sass/partials/lms/theme/blocks/_courses-index-page.scss
+++ b/lms/static/sass/partials/lms/theme/blocks/_courses-index-page.scss
@@ -27,6 +27,10 @@
                 }
             }
 
+            .find-courses & .courses-listing-item {
+                margin-top: 0;
+            }
+
             .course {
                 .course-info {
                     .course-title {
